; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_tty_ldisc.c_tty_ldisc_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_tty_ldisc.c_tty_ldisc_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_struct = type { i32, i32* }

@N_TTY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tty_ldisc_release(%struct.tty_struct* %0, %struct.tty_struct* %1) #0 {
  %3 = alloca %struct.tty_struct*, align 8
  %4 = alloca %struct.tty_struct*, align 8
  store %struct.tty_struct* %0, %struct.tty_struct** %3, align 8
  store %struct.tty_struct* %1, %struct.tty_struct** %4, align 8
  %5 = load %struct.tty_struct*, %struct.tty_struct** %3, align 8
  %6 = call i32 @tty_ldisc_halt(%struct.tty_struct* %5)
  %7 = call i32 (...) @flush_scheduled_work()
  %8 = load %struct.tty_struct*, %struct.tty_struct** %3, align 8
  %9 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %8, i32 0, i32 0
  %10 = call i32 @mutex_lock(i32* %9)
  %11 = load %struct.tty_struct*, %struct.tty_struct** %3, align 8
  %12 = load %struct.tty_struct*, %struct.tty_struct** %3, align 8
  %13 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @tty_ldisc_close(%struct.tty_struct* %11, i32* %14)
  %16 = load %struct.tty_struct*, %struct.tty_struct** %3, align 8
  %17 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %16, i32 0, i32 1
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @tty_ldisc_put(i32* %18)
  %20 = load %struct.tty_struct*, %struct.tty_struct** %3, align 8
  %21 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %20, i32 0, i32 1
  store i32* null, i32** %21, align 8
  %22 = load %struct.tty_struct*, %struct.tty_struct** %3, align 8
  %23 = load i32, i32* @N_TTY, align 4
  %24 = call i32 @tty_set_termios_ldisc(%struct.tty_struct* %22, i32 %23)
  %25 = load %struct.tty_struct*, %struct.tty_struct** %3, align 8
  %26 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %25, i32 0, i32 0
  %27 = call i32 @mutex_unlock(i32* %26)
  %28 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %29 = icmp ne %struct.tty_struct* %28, null
  br i1 %29, label %30, label %32

30:                                               ; preds = %2
  %31 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  call void @tty_ldisc_release(%struct.tty_struct* %31, %struct.tty_struct* null)
  br label %32

32:                                               ; preds = %30, %2
  ret void
}

declare dso_local i32 @tty_ldisc_halt(%struct.tty_struct*) #1

declare dso_local i32 @flush_scheduled_work(...) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @tty_ldisc_close(%struct.tty_struct*, i32*) #1

declare dso_local i32 @tty_ldisc_put(i32*) #1

declare dso_local i32 @tty_set_termios_ldisc(%struct.tty_struct*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
